[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"
description = "Solana Escrow DApp - Rust/Axum backend"

[[bin]]
name = "rust-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
